# apertium-eng

./: .gitattributes  .gitignore  AUTHORS  Disambiguated text.txt  Formatted_splatoon2.txt  Makefile  Makefile.am  NEWS  README  apertium-eng.eng.acx  apertium-eng.eng.dix  apertium-eng.eng.mtx  apertium-eng.eng.rlx  apertium-eng.eng.syn.rlx  apertium-eng.eng.tsx  apertium-eng.pc.in  apertium-eng.post-eng.dix  autogen.sh  commondefns.mtx  configure.ac  eng.prob  modes.xml  tagger.make  tagger.supervised.make  tagger.unsupervised.make
.github/workflows/: monolingual.md
dev/: eng.freq.txt
dev/testvoc/: find-duplicates.sh  testvoc.sh
morphology_stuff/: missing_words.txt
tagger-data/: README.md
tagger-data/crp/: example.txt
tagger-data/tagged/: aizkolaritza1.tagged  alabama1.tagged  albedo1.tagged  alfred1.tagged  algeria1.tagged  aluminium1.tagged  ambiorix1.tagged  anarchism1.tagged  animism1.tagged  atoms1.tagged  belize1.tagged  belize2.tagged  bessarabia2.tagged  caucasus1.tagged  coil1.tagged  colombia1.tagged  dakhma1.tagged  derbent1.tagged  faust1.tagged  karabakh1.tagged  kazakhstan1.tagged  khazars1.tagged  kyrgyzstan.tagged  monarchy1.tagged  partisans1.tagged  peru1.tagged  pirates.tagged  sahara1.tagged  sunday1.tagged  tokamak1.tagged  transmission1.tagged  turing1.tagged  vietnam1.tagged
test/: tests.json  xkcd-convert-expected.txt  xkcd-disam-expected.txt  xkcd-disam-gold.txt  xkcd-input.txt  xkcd-morph-expected.txt
texts/: Formatted_splatoon2.txt  MANIFEST  MANIFEST.txt  TRAINING  afghanistan1.handtagged.ilie.txt  afghanistan1.handtagged.yongloong.txt  afghanistan1.raw.txt  afghanistan1.tagged.txt  aizkolaritza1.handtagged.andrei.txt  aizkolaritza1.raw.txt  alabama1.handtagged.darkgaia.txt  alabama1.handtagged.ilie.txt  alabama1.tagged.txt  albedo1.handtagged.andrei.txt  albedo1.handtagged.niroulapradeep.txt  albedo1.tagged.txt  alfred1.handtagged.yongloong.txt  alfred1.raw.txt  alfred1.tagged.txt  algeria1.handtagged.quicksilver.txt  algeria1.handtagged.rap.txt  algeria1.handtagged.yugin.txt  algeria1.tagged.txt  aluminium1.handtagged.andrei.txt  aluminium1.raw.txt  aluminium1.tagged.txt  ambiorix1.handtagged.darkgaia1.txt  ambiorix1.handtagged.quicksilver.txt  ambiorix1.raw.txt  ambiorix1.tagged.txt  anarchism1.handtagged.darkgaia.txt  anarchism1.handtagged.ilie.txt  anarchism1.raw.txt  anarchism1.tagged.txt  anarchism1.tagged.txt.1  animism1.handtagged.andrei.txt  aroundTheWorld.txt  atoms1.handtagged.kristian-hansen.txt  atoms1.raw.txt  atoms1.tagged.txt  (+103 more)
texts/consensus/: afghanistan1.consensus.txt  aizkolaritza1.consensus.txt  alabama1.consensus.txt  albedo1.consensus.txt  alfred1.consensus.txt  algeria1.consensus.txt  aluminium1.consensus.txt  ambiorix1.consensus.txt  anarchism1.consensus.txt  animism1.consensus.txt  atoms1.consensus.txt  belize1.consensus.txt  belize2.consensus.txt  bessarabia2.consensus.txt  caucasus1.consensus.txt  coil1.consensus.txt  colombia1.consensus.txt  dakhma1.consensus.txt  derbent1.consensus.txt  eng.tagged  evolution.consensus.txt  faust1.consensus.txt  karabakh1.consensus.txt  kazakhstan1.consensus.txt  khazars1.consensus.txt  kyrgyzstan.consensus.txt  modest_proposal.consensus.txt  monarchy1.consensus.txt  partisans1.consensus.txt  peru1.consensus.txt  pirates.consensus.txt  sahara1.consensus.txt  sunday1.consensus.txt  tokamak1.consensus.txt  transmission1.consensus.txt  turing1.consensus.txt  vietnam1.consensus.txt
texts/old/: afghanistan1.handtagged.yongloong.txt  aizkolaritza1.handtagged.andrei.txt  aizkolaritza1.tagged.txt  alabama1.raw.txt  alabama1.tagged.txt  albedo1.handtagged.andrei.txt  albedo1.handtagged.niroulapradeep.txt  albedo1.raw.txt  alfred1.handtagged.darkgaia.txt  alfred1.handtagged.yongloong.txt  alfred1.raw.txt  algeria1.handtagged.yugin.txt  algeria1.raw.txt  aluminium1.handtagged.andrei.txt  anarchism1.handtagged.ilie.txt  animism1.handtagged.andrei.txt  animism1.handtagged.cmy.txt  animism1.raw.txt  animism1.tagged.txt  atoms1.handtagged.andrei.txt  atoms1.handtagged.kristian-hansen.txt  belize1.handtagged._VN_.txt  belize1.handtagged.darkgaia.txt  belize1.tagged.txt  belize2.raw.txt  bessarabia1.tagged.txt  caucasus1.handtagged.leongxuhua.txt  caucasus1.raw.txt  caucasus1.tagged.txt  coil1.handtagged.andrei.txt  coil1.tagged.txt  colombia1.handtagged.quicksilver.txt  colombia1.raw.txt  dakhma1.handtagged.spectie.txt  derbent1.handtagged.ilie.txt  faust1.raw.txt  faust1.tagged.txt  interstate1.handtagged.amuritna.txt  interstate1.raw.txt  karabakh1.handtagged.darkgaia1.txt  (+27 more)
