AC_PREREQ(2.52)

AC_INIT([apertium-eng], [0.1.0], [unhammer@fsfe.org])
AM_INIT_AUTOMAKE([apertium-eng], [0.1.0], no-define)
AC_PROG_LN_S
AC_PROG_AWK

m4_define([required_apertium_version], [3.3.0])
m4_define([required_lttolbox_version], [3.3.0])

PKG_CHECK_MODULES(APERTIUM, apertium >= required_apertium_version)
PKG_CHECK_MODULES(LTTOOLBOX, lttoolbox >= required_lttolbox_version)


AC_PATH_PROG(CGCOMP, cg-comp, no)
if test x$ac_cv_path_CGCOMP = x
then
  AC_MSG_ERROR([You don't have cg-comp installed.])
fi
if test x$ac_cv_path_CGPROC = xno
then
  AC_MSG_ERROR([You don't have cg-comp installed.])
fi


AP_MKINCLUDE

AC_OUTPUT([Makefile apertium-eng.pc])

